--- a/index.html
+++ b/index.html
@@ -1,27 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Drum Kit</title>
 
-    <h1>Hello</h1>
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 
-    <input type="checkbox">
+  <!-- Custom CSS style sheet -->
+  <link rel="stylesheet" href="styles.css">
 
-    <button style=":active color:red;">Click Me</button>
+  <!-- Fonts from Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 
-    <ul>
-      <li class="deep">
-        <a href="https://www.google.com">Google</a>
-      </li>
-      <li class="list">Second</li>
-      <li class="list">Third</li>
-    </ul>
+</head>
 
-  </body>
+<body>
+
+  <h1 id="title">Drum 🥁 Kit</h1>
+  <h3>Make your own music.....</h3>
+  <div class="set">
+    <button class="w drum">w</button>
+    <button class="a drum">a</button>
+    <button class="s drum">s</button>
+    <button class="d drum">d</button>
+    <button class="j drum">j</button>
+    <button class="k drum">k</button>
+    <button class="l drum">l</button>
+  </div>
+
+
+  <!-- Footer -->
+  <footer>
+    <h3>By Souradip</h3>
+  </footer>
+
+  <!-- Linking Javascript file -->
+  <script src="F:\web_development\Drum Kit Starting Files\index.js" charset="utf-8"></script>
+</body>
+
 
 </html>
